# testTask_CXX

./: CMakeLists.txt  README.md  readme.txt
MessageGetter/: main.cpp
MessageSender/headers/: receiverops.h  stringops.h
MessageSender/sources/: main.cpp  receiverops.cpp  stringops.cpp
